[package]
name = "db"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
thorn = { git = "https://github.com/Lantern-chat/thorn" }

tokio = { version = "1.4", features = ["sync", "rt", "macros"] }
tokio-postgres = "0.7"
async-trait = "0.1.50"
futures = "0.3.14"
failsafe = "1.0.0"
arc-swap = "1.2.0"
thiserror = "1.0.24"
parking_lot = "0.12"
tracing = "0.1.25"
aho-corasick = "1.1.3"
scc = "2"
ahash = "0.8"
